сделана основная анимация в канвасе, нужны проекты с вёрсткой

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>smth.0001 Homuncul</title>
+    <title>smth.0001 Archive</title>
     <style>
         body {
             overscroll-behavior: none;
@@ -21,6 +21,8 @@
             display: block;
         }
     </style>
+
+    <!-- Оставляем прогресс до 0.65, а скейл ставим на 1.5 - Итоговый согласованный вариант -->
 </head>
 <body>
     <div id="container"></div>
